--- a/SPCAApp/SPCAAppGui.csproj
+++ b/SPCAApp/SPCAAppGui.csproj
@@ -46,16 +46,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AddAnimal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AddAnimal.Designer.cs">
+      <DependentUpon>AddAnimal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddConsumption.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddConsumption.Designer.cs">
+      <DependentUpon>AddConsumption.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Animal.cs" />
+    <Compile Include="AnimalManager.cs" />
+    <Compile Include="AnimalStats.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnimalStats.Designer.cs">
+      <DependentUpon>AnimalStats.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Home.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AddAnimal.resx">
+      <DependentUpon>AddAnimal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddConsumption.resx">
+      <DependentUpon>AddConsumption.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AnimalStats.resx">
+      <DependentUpon>AnimalStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
